# stabil-api

./: Cargo.toml  README.md  shell.nix
.forgejo/workflows/: ci.yml  test.yml
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs  tests.rs
src/routes/: cancel_reservations.rs  checked_out.rs  get_checked_out.rs  get_index.rs  get_loans.rs  get_ppn_from_bar.rs  get_reservations.rs  get_search.rs  index.rs  make_reservation.rs  mod.rs  post_cancel_reservations.rs  post_make_reservation.rs  post_session_token.rs  ppn_from_bar.rs  reservations.rs  search.rs  session_token.rs
src/scraping/: libraries.rs  mod.rs  models.rs  utils.rs
